--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,9 @@
 .card-height {
   min-height: 500px;
 }
+
+.thumb-hover:hover {
+  transform: scale(1.005);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.342);
+  transition: 600ms;
+}
